fix modal styles on mobile

--- a/src/app/components/create-contact-dialog/create-contact-dialog.component.css
+++ b/src/app/components/create-contact-dialog/create-contact-dialog.component.css
@@ -1,3 +1,9 @@
 .modal-contents {
   padding: 25px;
 }
+
+@media (max-width: 700px) {
+  app-modal-form-group {
+    flex-direction: column;
+  }
+}
